Fast Math Foil Test
Create 6 test cases with repetition with and without fastmath on
P100.

--- a/share/picongpu/examples/FoilLCT/etc/picongpu/8.cfg
+++ b/share/picongpu/examples/FoilLCT/etc/picongpu/8.cfg
@@ -30,14 +30,14 @@
 ## Section: Required Variables ##
 #################################
 
-TBG_wallTime="2:00:00"
+TBG_wallTime="4:00:00"
 
 TBG_devices_x=2
 TBG_devices_y=4
 TBG_devices_z=1
 
-TBG_gridSize="256 2560"
-TBG_steps="5000"
+TBG_gridSize="1024 8192"
+TBG_steps="60000"
 
 TBG_periodic="--periodic 1 0"
 
@@ -47,13 +47,13 @@ TBG_periodic="--periodic 1 0"
 
 # Create a particle-energy histogram [in keV]
 TBG_e_histogram="--e_energyHistogram.period 100 --e_energyHistogram.filter all  --e_energyHistogram.binCount 1024    \
-                 --e_energyHistogram.minEnergy 0 --e_energyHistogram.maxEnergy 2000"
+                 --e_energyHistogram.minEnergy 0 --e_energyHistogram.maxEnergy 5000"
 TBG_H_histogram="--H_energyHistogram.period 100 --H_energyHistogram.filter all --H_energyHistogram.binCount 1024    \
-                 --H_energyHistogram.minEnergy 0 --H_energyHistogram.maxEnergy 2000"
+                 --H_energyHistogram.minEnergy 0 --H_energyHistogram.maxEnergy 5000"
 TBG_C_histogram="--C_energyHistogram.period 100 --C_energyHistogram.filter all  --C_energyHistogram.binCount 1024    \
-                 --C_energyHistogram.minEnergy 0 --C_energyHistogram.maxEnergy 2000"
+                 --C_energyHistogram.minEnergy 0 --C_energyHistogram.maxEnergy 30000"
 TBG_N_histogram="--N_energyHistogram.period 100 --N_energyHistogram.filter all --N_energyHistogram.binCount 1024    \
-                 --N_energyHistogram.minEnergy 0 --N_energyHistogram.maxEnergy 2000"
+                 --N_energyHistogram.minEnergy 0 --N_energyHistogram.maxEnergy 35000"
 
 # longitudinal phase space: in m_<species> c
 TBG_e_PSypy="--e_phaseSpace.period 250 --e_phaseSpace.filter all --e_phaseSpace.space y --e_phaseSpace.momentum py --e_phaseSpace.min -2.0 --e_phaseSpace.max 2.0"
@@ -72,10 +72,7 @@ TBG_chargeConservation="--chargeConservation.period 100"
 # regular output
 TBG_hdf5="--hdf5.period 250 --hdf5.file simData"
 
-TBG_plugins="!TBG_e_histogram !TBG_H_histogram !TBG_C_histogram !TBG_N_histogram \
-             !TBG_e_PSypy !TBG_H_PSypy !TBG_C_PSypy !TBG_N_PSypy                 \
-             !TBG_sumEnergy !TBG_chargeConservation                              \
-             !TBG_hdf5"
+TBG_plugins="!TBG_e_histogram !TBG_H_histogram !TBG_C_histogram !TBG_N_histogram"
 
 
 #################################
